--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,13 @@ resume_contact_email:           "aloysius.tatus@gmail.com.com"
 
 # the next two items are used for schema itemprops in _layouts/resume.html
 resume_contact_telephone:       "+62 85895160039"
-resume_contact_address:         "Madiun,East Java,Indonesia"
+resume_contact_address:         "Madiun(East Java),Indonesia"
 
-resume_header_contact_info:     "Madiun East Java, Indonesia • +6285895160039 • aloysius.tatus@gmail.com.com"
+resume_header_contact_info:     "Madiun(East Java), Indonesia • +6285895160039 • aloysius.tatus@gmail.com.com"
 display_header_contact_info:    "true"
 
-resume_header_intro: "<p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but keep it brief and concise</p>"
+resume_header_intro: "<p>I Finished my Bachelor of Computer in Information System at Institut Teknologi Sepuluh November. my GPA is 3.38. i have organizational experienced in BEM ITS and HMSI FTIK ITS. That experience enchance my soft skills such as leadership, teamwork, time management, critical-analytical thinking, resilience, adaptive, interpersonal communication, and networking.
+</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
@@ -45,14 +46,14 @@ resume_section_associations:    true
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
 resume_social_links:
-  resume_github_url:            "https://github.com/jglovier/resume-template"
-  resume_twitter_url:           "http://twitter.com/jglovier"
-  resume_dribbble_url:          "https://dribbble.com/jag"
-  # resume_facebook_url:          "insert Facebook URL here"
-  resume_linkedin_url:          "https://www.linkedin.com/in/joelglovier"
-  # resume_instagram_url:         "insert your Instagram URL here"
-  resume_website_url:           "http://joelglovier.com"
-  resume_medium_url:            "https://medium.com/@jglovier"
+  resume_github_url:            "https://github.com/aloysiustk"
+  resume_twitter_url:           "http://twitter.com/aloysius_tatus"
+  # resume_dribbble_url:          "https://dribbble.com/jag"
+  resume_facebook_url:          "https://facebook.com/Aloysius.Tatus.Kristanto"
+  resume_linkedin_url:          "https://linkedin.com/in/aloysius-tatus-kristanto-658a88b5/"
+  resume_instagram_url:         "http://instagram.com/aloysius)tatus"
+  # resume_website_url:           "http://joelglovier.com"
+  resume_medium_url:            "https://medium.com/@aloysius_tatus"
 resume_print_social_links:      true
 
 # Design settings
