--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ sass:
 # Resume settings
 resume_avatar:                  "true"
 resume_name:                    "Aloysius Tatus Kristanto"
-resume_title:                   "Information System"
+resume_title:                   "Fresh Graduates Information System"
 
 # used for the contact button in _layouts/resume.html
 resume_contact_email:           "aloysius.tatus@gmail.com.com"
@@ -41,7 +41,7 @@ resume_section_skills:          true
 resume_section_recognition:     true
 resume_section_links:           true
 resume_section_associations:    true
-# resume_section_interests:       true
+resume_section_interests:       true
 
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
