--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,19 +1,17 @@
 # Jobs
-# VP of Global Communications
-- company: Springfield International Human Rights Outreach
-  position: VP of Global Communications
-  duration: Oct, 2013 &mdash; Present
-  summary: Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>A project you are proud of</li><li>Another awesome project</li><li>or a team or department you worked with</li></ul>
+# intern
+- company: PT Bank Rakyat Indonesia Tbk 
+  position: Internship at Divisi Satelit dan Jaringan infrastruktur
+  duration: 12 June, 2017 &mdash; 5 Agustus 2017
+  summary: review procedure & KPI metrics for quality assurances, network operating center, and vsat engineer	
+  #<ul class="resume-item-list">
+  #<li>A project you are proud of</li>
+  #<li>Another awesome project</li>
+  #<li>or a team or department you worked with</li></ul>
 
-# Director of Digital Stratgy
-- company: United Nations Human Rights Council
-  position: Director of Digital Strategy
-  duration:  Jun, 2010 &mdash; Sept, 2013
-  summary: If your stint was shorter, feel free to be brief and just call out the most meaningful points of your role. Be concise, and be meaninful. The person reading just needs enough to want to talk to you more about your experience.
+# course assistant
+- company: Dept. Information System Institut Teknologi Sepuluh November
+  position: Course assisstant of Information assets security
+  duration:  Feb, 2016 &mdash; Juni, 2016
+  summary: Conduct a pratice for student about Certificed Ethical Hacker. 
 
-
-# Communications Coordinator
-- company: Springfield Women & Children's Center
-  position: Communications Coordinator
-  duration:   Jun, 2008  &mdash; May, 2010
-  summary: Led communication efforts across digital and traditional media channels for marketing and public relations, internal communication strategies, and coordinated support programs for the recipients of the center's services.
