--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,4 +1,9 @@
 # Interests
-- description: Human rights and world affairs
-- description: Music (baritone saxiphonist)
-- description: Linguistics
+- description: Technology
+- description: Music
+- description: Football
+- description: Future
+- description: Life
+- description: Politics
+- description: Bussiness
+- description: Gaming
