--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,10 +1,17 @@
 # Recognitions
-- award: Outstanding Achievement
-  organization: Springfield Young Professionals
-  year: 2010, 2014
-  summary: Awarded the Outstanding Achievement award for contributions made to the community and professional accomplishments.
+- award: IC3 Certification - Global Standard 4
+  organization: Certiport (License:QAMM-4TNH)
+  year: 2016
+  summary: Certification for having demonstraded basic computer hardware, software, internet knowledge and skills though the successful completion of the examinations comprising IC3.
 
-- award: Most Likely To Succeed
-  organization: Springfield High School
-  year: 2004
-  summary: Voted Most Likely To Succeed by a panel of my high school peers.
+- award: Vulnerability Analysis and Detection
+  organization: Asosiasi Keamanan Siber Indonesia
+  year: 2016
+  summary: Awards who successfully completed the exam of vulnerability analysis and detection.
+
+- award: ERP Practice using SAP ERP with GBI 3.0 Dataset
+  organization: SAP University Alliances (conducted by Institut Teknologi Sepuluh November)
+  year: 2016
+  summary: Certify who attended the course on ERP Practice using SAP ERP with GBI 3.0 Dataset from October to December 2016.
+
+
