--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ resume_social_links:
   # resume_dribbble_url:          "https://dribbble.com/jag"
   resume_facebook_url:          "https://facebook.com/Aloysius.Tatus.Kristanto"
   resume_linkedin_url:          "https://linkedin.com/in/aloysius-tatus-kristanto-658a88b5/"
-  resume_instagram_url:         "http://instagram.com/aloysius)tatus"
+  resume_instagram_url:         "http://instagram.com/aloysius_tatus"
   # resume_website_url:           "http://joelglovier.com"
   resume_medium_url:            "https://medium.com/@aloysius_tatus"
 resume_print_social_links:      true
