--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -1,15 +1,18 @@
 # Associations
 # comment out the urls if you do not wish to display them
 
-- organization: PETA
-  role: Volunteer
-  year: 2001 &mdash; 2010
-  url: https://www.peta.org/
-  summary: Organized fund drives and participated in fundraising events for the benefit of PETA's local Springfield operations.
+- organization: Badan Eksekutif Mahasiswa ITS 
+  role: Staff of Ministry Student Resource Developtment.
+  year: 2015 &mdash; 2016
+  url: https://bem.its.ac.id/
+  summary: an organization that active on various activities and also organizes student systems within the scope of ITS.The responsibility of PSDM are:.<ul class="resume-item-list"><li>Managing MSDM of KM ITS</li><li>Make an infographic/Insight about KM ITS</li><li>Construct Analysis raw materials of student's batch 2016</li></ul>
 
 
-- organization: Yale Amnesty International
-  role: Communications coordinator
-  year: 2002 &mdash; 2004
-  url: http://campuspress.yale.edu/amnesty/
-  summary: During my junion and senior years at Yale, I was actively involved in Yale Amnesty International where I helped facilitate our student organization communications through website maintenance, writing for our campus publication, and graphic design of related materials.
+
+
+- organization: Himpunan Mahasiswa Sistem Informasi FTIK ITS
+  role: Head of Mapping Division Student Resource Developtment
+  year: 2016 &mdash; 2017
+  url: http://hima.is.its.ac.id/
+  summary: Student organization that accommodates activity in Information System Departement ITS. My Responsibilites are <ul class="resume-item-list"><li>Construct Mapping's Grand Design for Developtment of HMSI's members</li><li>Managinng development of HMSI's members</li></ul>
+   
