--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,12 +1,13 @@
 # Skills
-# Organizational leadership
-- skill: Organizational leadership
-  description: I have several years of experience leading organziations from community groups to business departments. From public speaking, to mentoring, to coordination of people and events, I can lead in any context.
+# Hardskills
+- skill: Hard skills
+  description: Networking Management, Cybersecurity, IT Performance and evaluation measurement, Enterprise Resource Planning (SAP SD,MM,PP,FI,CO &HCM) ,
+Project Management,IT Service Management ,Bussiness Process Management,Web Development (CI / Laravel),Java,Python,SQL,Digital Forensics,Bussiness Intelligence
 
-# Communications strategy
-- skill: Communications strategy
-  description: Content and marketing strategy,
+# Soft skills
+- skill: Soft Skills
+  description: leadership, teamwork, time management, critical-analytical thinking, resilience, adaptive, interpersonal communication, and networking.
 
-# Digital content development and creation
-- skill: Digital content development and creation
-  description: Copy writing, graphic design, web design, front-end web development, print design
+# Language
+skill: Language
+description: Bahasa Indonesia (Active), English (Passive) , Javannese(Passive)
