--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,5 +1,5 @@
 # links
 - url: "#"
   description: Downloadable CV
-- #url: "#"
-  #description: Springfield Young Professionals
+#url: "#"
+#description: Springfield Young Professionals
