--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,6 +1,6 @@
 # Skills
 # Hardskills
-- skill: Hard skills
+- skill: Hard Skills
   description: Networking Management 
 # Soft skills
 - skill: Soft Skills
