--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,10 +1,12 @@
 # Skills
-# Hardskills
-- skill: Hard Skills
-  description: Networking Management 
-# Soft skills
-- skill: Soft Skills
-  description: leadership, teamwork, time management, critical-analytical thinking, resilience, adaptive, interpersonal communication, and networking.
-# Language
-- skill: Language
-description: Bahasa Indonesia (Active), English (Passive) , Javannese(Passive)
+# Organizational leadership
+- skill: Organizational
+  description: I have several years of experience leading organziations from community groups to business departments. From public speaking, to mentoring, to coordination of people and events, I can lead in any context.
+
+# Communications strategy
+- skill: Communications strategy
+  description: Content and marketing strategy,
+
+# Digital content development and creation
+- skill: Digital content development and creation
+  description: Copy writing, graphic design, web design, front-end web development, print design
