--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,7 +1,7 @@
 # Skills
 # Organizational leadership
-- skill: Organizational
-  description: I have several years of experience leading organziations from community groups to business departments. From public speaking, to mentoring, to coordination of people and events, I can lead in any context.
+- skill: Hard Skills
+  description: Cybersecurity, Networking Management,Web Development (CI & Laravel), IT Performance and Evaluation Measurement, Enterprise Resource Planning (SAP SD,MM,PP,FI,CO,HCM), Project Management , IT Service Management , Bussiness Process Management, Digital Forensics, Bussiness Intelligence.
 
 # Communications strategy
 - skill: Communications strategy
