--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,12 +1,12 @@
 # Degree
-- degree: Bachelor of Computers
+- degree: Bachelor of Computers (GPA 3.38/4.00)
   uni: Institut Teknologi Sepuluh November
   year: 2014 &mdash; 2018
-  awards: GPA 3.38
-  #summary: If you had any meaningful roles at college, feel free to write about them here
+  #awards: GPA 3.38
+  #summary: 
 
 - degree: Senior High School
   uni: SMAN 3 Madiun
-  year: 2011 %mdash; 2014
+  year: 2011 &mdash; 2014
   #award: Most likely to succeed
   #summary: You can choose to have either a single or multiple awards
