--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -5,7 +5,7 @@
   summary: Certification for having demonstraded basic computer hardware, software, internet knowledge and skills though the successful completion of the examinations comprising IC3.
 
 - award: Vulnerability Analysis and Detection
-  organization: Asosiasi Keamanan Siber Indonesia
+  organization: Asosiasi Keamanan Siber Indonesia (License AKSI1-A206-11101-3571)
   year: 2016
   summary: Awards who successfully completed the exam of vulnerability analysis and detection.
 
