--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,12 +1,12 @@
 # Skills
-# Organizational leadership
+# hard
 - skill: Hard Skills
   description: Cybersecurity, Networking Management,Web Development (CI & Laravel), IT Performance and Evaluation Measurement, Enterprise Resource Planning (SAP SD,MM,PP,FI,CO,HCM), Project Management , IT Service Management , Bussiness Process Management, Digital Forensics, Bussiness Intelligence.
 
-# Communications strategy
-- skill: Communications strategy
-  description: Content and marketing strategy,
+# soft
+- skill: Soft Skills
+  description: Leadership, Teamwork, Time Management, Critical-Analytical Thinking, Resilience, Adaptive, Interpersonal Communication, and networking.
 
-# Digital content development and creation
-- skill: Digital content development and creation
-  description: Copy writing, graphic design, web design, front-end web development, print design
+# Language
+- skill: Language
+  description: Bahasa Indonesia (Active), English (Passive) , Javannese(Passive)
