--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,9 +1,9 @@
 # Degree
-- degree: Bachelor of Computers (GPA 3.38/4.00)
+- degree: Bachelor of Computers 
   uni: Institut Teknologi Sepuluh November
   year: 2014 &mdash; 2018
   #awards: GPA 3.38
-  #summary: 
+  summary: (GPA 3.38/4.00) , TOEFL ITP (523) 
 
 - degree: Senior High School
   uni: SMAN 3 Madiun
