--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,5 +1,5 @@
 # links
-- url: "#"
+- url: "http://bit.ly/CVAloysiustk"
   description: Downloadable CV
 #url: "#"
 #description: Springfield Young Professionals
