--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -12,6 +12,6 @@
 - award: ERP Practice using SAP ERP with GBI 3.0 Dataset
   organization: SAP University Alliances (conducted by Institut Teknologi Sepuluh November)
   year: 2016
-  summary: Certify who attended the course on ERP Practice using SAP ERP with GBI 3.0 Dataset from October to December 2016.
+  summary: Certification who attended the course on ERP Practice using SAP ERP with GBI 3.0 Dataset from October to December 2016.
 
 
