--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -5,7 +5,7 @@
   role: Staff of Ministry Student Resource Developtment.
   year: 2015 &mdash; 2016
   url: https://bem.its.ac.id/
-  summary: an organization that active on various activities and also organizes student systems within the scope of ITS.The responsibility of PSDM are:.<ul class="resume-item-list"><li>Managing MSDM of KM ITS</li><li>Make an infographic/Insight about KM ITS</li><li>Construct Analysis raw materials of student's batch 2016</li></ul>
+  summary: an organization that active on various activities and also organizes student systems within the scope of ITS.The responsibility of PSDM are:.<ul class="resume-item-list"><li>Managing MSDM of KM ITS</li><li>Make an Infographic/Insight about KM ITS</li><li>Construct Analysis raw materials of student's batch 2016</li></ul>
 
 
 
