--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -5,7 +5,7 @@
   role: Staff of Ministry Student Resource Developtment.
   year: 2015 &mdash; 2016
   url: https://bem.its.ac.id/
-  summary: an organization that active on various activities and also organizes student systems within the scope of ITS.The responsibility of PSDM are:.<ul class="resume-item-list"><li>Managing MSDM of KM ITS</li><li>Make an Infographic/Insight about KM ITS</li><li>Construct Analysis raw materials of student's batch 2016</li></ul>
+  summary: an organization that active on various activities and also organizes student systems within the scope of ITS. The responsibility of SRD are:.<ul class="resume-item-list"><li>Managing MSDM of KM ITS</li><li>Make an Infographic/Insight about KM ITS</li><li>Construct Analysis an Analysis Raw Materials for Student's Batch 2016</li></ul>
 
 
 
@@ -14,5 +14,11 @@
   role: Head of Mapping Division Student Resource Developtment
   year: 2016 &mdash; 2017
   url: http://hima.is.its.ac.id/
-  summary: Student organization that accommodates activity in Information System Departement ITS. My Responsibilites are <ul class="resume-item-list"><li>Construct Mapping's Grand Design for Developtment of HMSI's members</li><li>Managinng development of HMSI's members</li></ul>
+  summary: Student organization that accommodates activity in Information System Departement ITS. My Responsibilites are <ul class="resume-item-list"><li>Construct Mapping's Grand Design for Development of HMSI's members</li><li>Managing development of HMSI's members</li><li>Construct an Analysis Raw Materials for Student's Batch 2016 of Information System</li></ul>
    
+- organization: Himpunan Mahasiswa Sistem Informasi FTIK ITS
+  role: Steering Committee MANAGE
+  year: 2015 &mdash; 2016
+  url: http://hima.is.its.ac.id/
+  summary: Masa Pengembangan Generasi (Manage) is an event that accommodates fresh students to develop their character. My Responsibilites are <ul class="resume-item-list"><li>Managing and Controlling of MANAGE 2015/2016</li><li>Decision Maker of Manage 2015/2016</li><li>Construct regeneration's grand design</li></ul>
+ 
