--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: "My Personalized Page"
+title: "Aloysius Tatus Kristanto"
 description: "A resume of Aloysius Tatus Kristanto."
 
 # Build settings
