--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: "Aloysius Tatus Kristanto"
+title: "A.T.K"
 description: "A resume of Aloysius Tatus Kristanto."
 
 # Build settings
