--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: "My CV"
-description: "A resume of Aloysius Tatus Kristanto."
+title: "CV A.T.K"
+description: "A CV of Aloysius Tatus Kristanto."
 
 # Build settings
 markdown: kramdown
@@ -11,20 +11,19 @@ sass:
 # Resume settings
 resume_avatar:                  "true"
 resume_name:                    "Aloysius Tatus Kristanto"
-resume_title:                   "Fresh Graduates Information System"
+resume_title:                   "Fresh Graduates of Information System"
 
 # used for the contact button in _layouts/resume.html
-resume_contact_email:           "aloysius.tatus@gmail.com.com"
+resume_contact_email:           "aloysius.tatus@gmail.com"
 
 # the next two items are used for schema itemprops in _layouts/resume.html
 resume_contact_telephone:       "+62 85895160039"
-resume_contact_address:         "Madiun(East Java),Indonesia"
+resume_contact_address:         "Madiun (East Java), Indonesia"
 
-resume_header_contact_info:     "Madiun(East Java), Indonesia • +6285895160039 • aloysius.tatus@gmail.com.com"
+resume_header_contact_info:     "Madiun (East Java) • +62 85895160039 • aloysius.tatus@gmail.com"
 display_header_contact_info:    "true"
 
-resume_header_intro: "<p>I Finished my Bachelor of Computer in Information System at Institut Teknologi Sepuluh November. my GPA is 3.38. i have organizational experienced in BEM ITS and HMSI FTIK ITS. That experience enchance my soft skills such as leadership, teamwork, time management, critical-analytical thinking, resilience, adaptive, interpersonal communication, and networking.
-</p>"
+resume_header_intro: "<p>I Finished my Bachelor of Computer in Information System at Institut Teknologi Sepuluh November at 15 Sept 2018. my GPA is 3.38. i have organizational experienced in BEM ITS and HMSI FTIK ITS. That experience enchance my soft skills such as leadership, teamwork, time management, critical-analytical thinking, resilience, adaptive, interpersonal communication, and networking.</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
@@ -46,13 +45,13 @@ resume_section_interests:       true
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
 resume_social_links:
-resume_github_url:            "https://github.com/aloysiustk"
+  resume_github_url:            "https://github.com/aloysiustk"
   resume_twitter_url:           "http://twitter.com/aloysius_tatus"
-  # resume_dribbble_url:          "https://dribbble.com/jag"
+  #resume_dribbble_url:          ""
   resume_facebook_url:          "https://facebook.com/Aloysius.Tatus.Kristanto"
   resume_linkedin_url:          "https://linkedin.com/in/aloysius-tatus-kristanto-658a88b5/"
-  resume_instagram_url:         "http://instagram.com/aloysius_tatus"
-  # resume_website_url:           "http://joelglovier.com"
+  resume_instagram_url:         "https://instagram.com/aloysius_tatus"
+  #resume_website_url:           ""
   resume_medium_url:            "https://medium.com/@aloysius_tatus"
 resume_print_social_links:      true
 
