--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: "CV A.T.K"
-description: "A CV of Aloysius Tatus Kristanto."
+title: "CV of A.T.K"
+description: "A Curicullum Vitae of Aloysius Tatus Kristanto."
 
 # Build settings
 markdown: kramdown
@@ -11,7 +11,7 @@ sass:
 # Resume settings
 resume_avatar:                  "true"
 resume_name:                    "Aloysius Tatus Kristanto"
-resume_title:                   "Fresh Graduates of Information System"
+resume_title:                   "Information System"
 
 # used for the contact button in _layouts/resume.html
 resume_contact_email:           "aloysius.tatus@gmail.com"
@@ -23,7 +23,7 @@ resume_contact_address:         "Madiun (East Java), Indonesia"
 resume_header_contact_info:     "Madiun (East Java) • +62 85895160039 • aloysius.tatus@gmail.com"
 display_header_contact_info:    "true"
 
-resume_header_intro: "<p>I Finished my Bachelor of Computer in Information System at Institut Teknologi Sepuluh November at 15 Sept 2018. my GPA is 3.38. i have organizational experienced in BEM ITS and HMSI FTIK ITS. That experience enchance my soft skills such as leadership, teamwork, time management, critical-analytical thinking, resilience, adaptive, interpersonal communication, and networking.</p>"
+resume_header_intro: "<p>I Finished my Bachelor of Computer in Information System at Institut Teknologi Sepuluh November on 15 Sept 2018. my GPA is 3.38. i have organizational experienced in BEM ITS and HMSI FTIK ITS. That experience enchance my soft skills such as leadership, teamwork, time management, critical-analytical thinking, resilience, adaptive, interpersonal communication, and networking.</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
