--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,4 +1,8 @@
 # Jobs
+- company: PT Bank Mandiri Tbk 
+  position: Data Scientist at Enterprise Data Management Group
+  duration: 21 November, 2018 &mdash; present
+  summary: Analyze funding and E-Channel , create machine learning model for mandiri online users.
 # intern
 - company: PT Bank Rakyat Indonesia Tbk 
   position: Internship at Divisi Satelit dan Jaringan infrastruktur
