--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -9,4 +9,4 @@
 
 # Language
 - skill: Language
-  description: Bahasa Indonesia (Active), English (Passive) , Javannese(Passive)
+  description: Bahasa Indonesia (Active), English (Passive) 
