--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -2,7 +2,7 @@
 # comment out the urls if you do not wish to display them
 
 - organization: Badan Eksekutif Mahasiswa ITS 
-  role: Staff of Ministry Student Resource Developtment.
+  role: Staff of Ministry Student Resource Developement.
   year: 2015 &mdash; 2016
   url: https://bem.its.ac.id/
   summary: an organization that active on various activities and also organizes student systems within the scope of ITS. The responsibility of SRD are:.<ul class="resume-item-list"><li>Managing MSDM of KM ITS</li><li>Make an Infographic/Insight about KM ITS</li><li>Construct Analysis an Analysis Raw Materials for Student's Batch 2016</li></ul>
@@ -11,7 +11,7 @@
 
 
 - organization: Himpunan Mahasiswa Sistem Informasi FTIK ITS
-  role: Head of Mapping Division Student Resource Developtment
+  role: Head of Mapping Division Student Resource Developement
   year: 2016 &mdash; 2017
   url: http://hima.is.its.ac.id/
   summary: Student organization that accommodates activity in Information System Departement ITS. My Responsibilites are <ul class="resume-item-list"><li>Construct Mapping's Grand Design for Development of HMSI's members</li><li>Managing development of HMSI's members</li><li>Construct an Analysis Raw Materials for Student's Batch 2016 of Information System</li></ul>
