--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ resume_contact_address:         "Madiun (East Java), Indonesia"
 resume_header_contact_info:     "Madiun (East Java) • +62 81316285479 • aloysius.tatus@gmail.com"
 display_header_contact_info:    "true"
 
-resume_header_intro: "<p>I Finished my Bachelor of Computer Science in Information System at Institut Teknologi Sepuluh November on 15 Sept 2018 which my GPA is 3.38 GPA and 523 Toefl score. I have organizational experienced in BEM ITS and HMSI FTIK ITS. That experience enchance my soft skills such as leadership, teamwork, time management, critical-analytical thinking, resilience, adaptive, interpersonal communication, and networking.</p>"
+resume_header_intro: "<p>I Finished my Bachelor of Science in Computer Science at Institut Teknologi Sepuluh November on 15 Sept 2018 which my GPA is 3.38 GPA and 523 Toefl score. I have organizational experienced in BEM ITS and HMSI FTIK ITS. That experience enchance my soft skills such as leadership, teamwork, time management, critical-analytical thinking, resilience, adaptive, interpersonal communication, and networking.</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
