--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -2,7 +2,7 @@
 - company: PT Bank Mandiri Tbk 
   position: Data Analyst at Enterprise Data Management Group
   duration: 21 November, 2018 &mdash; present
-  summary: Analyze funding and E-Channel , create machine learning model for mandiri online users.
+  summary: Analyze funding , E-Channel ,mortgage and autoloans.create machine learning model for mandiri online users.
 # intern
 - company: PT Bank Rakyat Indonesia Tbk 
   position: Internship at Divisi Satelit dan Jaringan infrastruktur
