--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -2,7 +2,7 @@
 - company: PT Bank Mandiri Tbk 
   position: Data Analyst at Enterprise Data Management Group
   duration: 21 November, 2018 &mdash; present
-  summary: Projects and activities from Funding,E-channel and Loans:. 
+  summary: Projects and activities from Funding,E-channel and Loans
   <ul class="resume-item-list">
   <li>Deploying Jupyterhub on server machine (efficiency up to 10% per user)</li>
   <li>Acquisiton new mandiri online users from all customers of Bank Mandiri (take up rate 1%)</li>
