--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,7 +1,7 @@
 # Skills
 # hard
 - skill: Hard Skills
-  description: Big Data , Cybersecurity, Networking Management,Web Development (CI & Laravel), IT Performance and Evaluation Measurement, Enterprise Resource Planning (SAP SD,MM,PP,FI,CO,HCM), Project Management , IT Service Management , Bussiness Process Management, Digital Forensics, Bussiness Intelligence.
+  description: SQL , Big Data , Business Intelligence, Data Visualization , Python , Cybersecurity, Networking Management,Web Development (CI & Laravel), IT Performance and Evaluation Measurement, Machine Learning, Enterprise Resource Planning (SAP SD,MM,PP,FI,CO,HCM), Project Management , IT Service Management , Bussiness Process Management, Digital Forensics.
 
 # soft
 - skill: Soft Skills
