--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,7 @@ resume_contact_address:         "Madiun (East Java), Indonesia"
 resume_header_contact_info:     "Madiun (East Java) • +62 81316285479 • aloysius.tatus@gmail.com"
 display_header_contact_info:    "true"
 
-resume_header_intro: "<p>Finished Bachelor of Computer Science in Information System at Institut Teknologi Sepuluh November on 15 Sept 2018 with 3.38 GPA and 523 Toefl score. Passionate being Data Analyst who solved Business need. Have knowledge in SQL ( RDMS and Big Data ) , Visualization ( Tableau / Power BI) , analytical tools (Python and excel ) , and Data Integration (Talend) .</p>"
-
+resume_header_intro: "<p>Passionate being Data Engineer who solved Business need. Have knowledge in SQL ( RDMS and Big Data ) , Visualization ( Tableau / Power BI) , analytical tools (Python and excel ) , and Data Integration (Talend Open Studio).</p>"
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
 # or remove the resume_looking_for_work option entirely
