--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -2,6 +2,18 @@
 - company: PT Bank Mandiri Tbk 
   position: Data Analyst at Enterprise Data Management Group
   duration: 21 November, 2018 &mdash; present
+  summary: Projects and activities of Data Engineer <ul class=\"resume-item-list"\><li>Tableau Dashboard for BoD</li> </ul>
+
+# Jobs
+- company: PT Bank Mandiri Tbk 
+  position: Officer Development Program - IT
+  duration: 21 August 2019 &mdash; present
+  summary: Having knowledge in <ul class=\"resume-item-list"\><li>Banking Industry Overview</li><li>Fundamental of Funding,Credit and Risk Management</li><li>Treasury , Trade Service, Guarantee Bank and Investment Product</li><li>Digital Banking</li></ul>
+
+# Jobs
+- company: PT Bank Mandiri Tbk 
+  position: Data Analyst at Enterprise Data Management Group
+  duration: 21 November, 2018 &mdash; 21 August 2019
   summary: Projects and activities from Funding-E-channel and Loans <ul class=\"resume-item-list"\><li>Deploying Jupyterhub on server machine (efficiency up to 10% per user)</li><li>Acquisiton new mandiri online users from all customers of Bank Mandiri (take up rate 1%)</li><li>Acquisiton of Top Up mortgage customer from existing mortgage (take up rate 0.5%)</li><li>Create an automation for whitelist of Apply and Buy Tokopedia Project (efficiency 5%)</li><li>Solved a difference subsidy rate of KUR between Bank Mandiri and Governments (Worth Millions Rupiah)</li><li>Analyze a sleeping users of mobile whose using telkomsel as providers at mei-agustus 2018.</li><li>Analyze a customers who paid off their mortgage loans before maturity date.</li><li>Analyze a KUM and KUR Customers from theirs transaction.</li> </ul>
 # intern
 - company: PT Bank Rakyat Indonesia Tbk 
