--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -2,15 +2,15 @@
 # uncomment the urls if you wish to display them, and add your own URL
 
 # jazznotes.io
-- project: jazznotes.io
-  role: Founder & Primary Developer
-  duration: 2012 &mdash; Present
+- project: Apply and Buy Tokopedia-Mandiri
+  role: Data Analyst
+  duration: 2019
   # url: "#"
-  description: Jazz Notes is an open source node/ember app that helps you keep track of your music compositions and new ideas.
+  description: Create an automation for generating an eligible customers of Credit Card
 
 # Springfield Community Outreach Group
-- project: Springfield Community Outreach Group
-  role: Co-Founder & Organizer
-  duration: 2007 &mdash; Present
+- project: Dashboard Board of Directors
+  role: Data Engineer
+  duration:  Des 2019 &mdash; Present
   # url: "#"
-  description: SCOG is a local monthly meetup in Springfield where we share opportunities to volunteer in the community and organize support for families and neighborhoods in need of assistance that the community can provide.
+  description: Create a summary of Echannel Transaction for  Dashboard of BoD
