--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,14 +1,14 @@
 # Projects
 # uncomment the urls if you wish to display them, and add your own URL
 
-# jazznotes.io
+# new
 - project: Apply and Buy Tokopedia-Mandiri
   role: Data Analyst
   duration: 2019
   # url: "#"
   description: Create an automation for generating an eligible customers of Credit Card
 
-# Springfield Community Outreach Group
+# new
 - project: Dashboard Board of Directors
   role: Data Engineer
   duration:  Des 2019 &mdash; Present
