--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,7 +1,7 @@
 # Jobs
 - company: PT Bank Mandiri Tbk 
-  position: Data Analyst at Enterprise Data Management Group
-  duration: 21 November, 2018 &mdash; present
+  position: Data Engineer at Enterprise Data Management Group
+  duration: 5 Desember, 2019 &mdash; present
   summary: Projects and activities of Data Engineer <ul class=\"resume-item-list"\><li>Tableau Dashboard for BoD</li> </ul>
 
 # Jobs
