--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -2,7 +2,7 @@
 - company: PT Bank Mandiri Tbk 
   position: Data Engineer at Enterprise Data Management Group
   duration: 5 Desember, 2019 &mdash; present
-  summary: Projects and activities of Data Engineer <ul class=\"resume-item-list"\><li>Tableau Dashboard for BoD</li> </ul>
+  summary: Being First Senior Manager of Data Engineer </ul>
 
 # Jobs
 - company: PT Bank Mandiri Tbk 
