--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ sass:
 # Resume settings
 resume_avatar:                  "true"
 resume_name:                    "Aloysius Tatus Kristanto"
-resume_title:                   "Information System"
+resume_title:                   "Data Engineer"
 
 # used for the contact button in _layouts/resume.html
 resume_contact_email:           "aloysius.tatus@gmail.com"
@@ -23,23 +23,23 @@ resume_contact_address:         "Madiun (East Java), Indonesia"
 resume_header_contact_info:     "Madiun (East Java) • +62 813xxxxxxxx • aloysius.tatus@gmail.com"
 display_header_contact_info:    "true"
 
-resume_header_intro: "<p>Passionate being Data Engineer who solved Business need. Have knowledge in SQL ( RDMS and Big Data ) , Visualization ( Tableau / Power BI) , analytical tools (Python and excel ) , and Data Integration (Talend Open Studio).</p>"
+resume_header_intro: "<p>Passionate being Data Engineer who solved Business need. Have knowledge in SQL ( RDMS and Big Data ) , Visualization (Tableau) , analytical tools (Python and) , and Data Integration (Talend Open Studio).</p>"
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
 # or remove the resume_looking_for_work option entirely
 # to leave blank
-resume_looking_for_work:        "yes"
+resume_looking_for_work:        "no"
 
 # Decide which sections to use
 # comment out to hide
 resume_section_experience:      true
 resume_section_education:       true
-resume_section_projects:        false
+resume_section_projects:        true
 resume_section_skills:          true
 resume_section_recognition:     true
 resume_section_links:           true
-resume_section_associations:    true
-resume_section_interests:       true
+#resume_section_associations:    true
+#resume_section_interests:       true
 
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
