--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,4 +1,58 @@
 # Recognitions
+
+- award: Introduction to Data Science in Python
+  organization: Coursera
+  year: 2023
+  summary:
+
+- award: Introduction to Data Engineering
+  organization: Coursera
+  year: 2022
+  summary:
+
+- award: Python for Data Science,AI & Development
+  organization: Coursera
+  year: 2022
+  summary:
+
+
+- award: Apache Spark Essential Training 
+  organization: LinkedIn
+  year: 2021
+  summary:
+
+
+- award: Design Thinking
+  organization: LinkedIn
+  year: 2021
+  summary:
+
+
+- award: SQL Essential Training (2018)
+  organization: LinkedIn
+  year: 2021
+  summary:
+
+- award: Data Science Foundations:Data Engineering
+  organization: LinkedIn
+  year: 2020
+  summary:
+
+- award: Learning Data Science: Understanding the Basics
+  organization: LinkedIn
+  year: 2021
+  summary:
+
+- award: Introduction to SQL
+  organization: DataCamp
+  year: 2019
+  summary:
+
+- award: Introduction to Python
+  organization: DataCamp
+  year: 2019
+  summary:
+
 - award: IC3 Certification - Global Standard 4
   organization: Certiport (License:QAMM-4TNH)
   year: 2016
@@ -13,5 +67,4 @@
   organization: SAP University Alliances (conducted by Institut Teknologi Sepuluh November)
   year: 2016
   summary: Certification who attended the course on ERP Practice using SAP ERP with GBI 3.0 Dataset from October to December 2016.
-
 
