--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,7 +1,7 @@
 # Skills
 # hard
 - skill: Hard Skills
-  description: SQL , Big Data , Business Intelligence, Data Visualization , Python , Cybersecurity, Networking Management,Web Development (CI & Laravel), IT Performance and Evaluation Measurement, Machine Learning, Enterprise Resource Planning (SAP SD,MM,PP,FI,CO,HCM), Project Management , IT Service Management , Bussiness Process Management, Digital Forensics.
+  description: SQL , Big Data , Business Intelligence, Data Visualization , Python , IT Performance and Evaluation Measurement, Machine Learning, Project Management , IT Service Management , Bussiness Process Management.
 
 # soft
 - skill: Soft Skills
@@ -9,4 +9,4 @@
 
 # Language
 - skill: Language
-  description: Bahasa Indonesia (Active), English (Passive) 
+  description: Bahasa Indonesia (Active), English (Active) 
